--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,11 @@ theme: minima
 plugins:
   - jekyll-feed
 google_analytics: UA-109131329-1
+defaults:
+  - scope:
+      path: "assets/img"
+    values:
+      image: true
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
