--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+
 title: Nuno Barreiro
 email: website@nunobarreiro.com
 description: >- # this means to ignore newlines until "baseurl:"
@@ -22,6 +23,9 @@ url: "http://nunobarreiro.com" # the base hostname & protocol for your site, e.g
 twitter_username: lusocoding
 github_username:  lusocoding
 linkedin_username: nunomvbarreiro
+google_analytics: UA-109131329-1
+disqus:
+  shortname: lusocoding
 include: ['_pages']
 kramdown: 
   input: GFM # allow GitHub flavored Markdown https://guides.github.com/features/mastering-markdown/#GitHub-flavored-markdown
@@ -30,7 +34,6 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
-google_analytics: UA-109131329-1
 defaults:
   - scope:
       path: "assets/img"
